# miniproject2

./: .gitignore  package-lock.json  package.json
AI/: config.txt  pyproject.toml
AI/service/: Retriever.py  main.py
backend/: build.gradle
backend/src/main/resources/: application.properties  places.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/img/travel_image/: filelist.txt
frontend/src/: App.css  App.js  axios.js  index.css  index.js
frontend/src/components/: AgeChart.js  Carousel3.js  CartContext.js  Ccard.js  Cnav.js  CommentForm.js  CommentList.js  Footer.js  GenderChart.js  InfoSection.js  Map.js  Maps.js  Navs.js  Paginated.js  PersonalizedTravelList.js  Search.js  TopTravelList.js
frontend/src/components/Aichosteps/: Aistep1.js  Aistep2.js  Aistep3.js  Aistep4.js  TravelSlide.js
frontend/src/components/Mypage/: Camodal.js  FullCalendarPage.js  Infomy.js  Mypnavs.js  SbzzFile.js  Schedule.js  Upmodal.js  (+1 more)
frontend/src/css/: Admin.css  Aichost.css  Carousels3.css  Cnav.css  Comment.css  DetailPage.css  FindIDPW.css  Footer.css  FullCalendarPage.css  Infomy.css  Login.css  Main.css  Map.css  Maps.css  Mcard.css  Mypnavs.css  Nav.css  SbzzFile.css  TopTravelList.css  Travel.css  Weather.css  WritePost.css  board.css
frontend/src/layouts/: MainLayout.js
frontend/src/pages/: Admin.js  Aicho.js  Board.js  Boards.js  Category.js  Categorydetail.js  Commuinty.js  DetaPage.js  DetailPage.js  FindIDPW.js  Home.js  Login.js  Mypage.js  Register.js  WritePost.js
frontend/src/routes/: Approutes.js
(+63 files in other folders)
