[project]
name = "langchain-env"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "dolam77", email = "dolsam77@nate.com" }]
requires-python = ">=3.10,<3.14"

# ★ 문자열 배열(PEP 508 형식)
dependencies = [
  "langchain==0.2.16",
  "tiktoken==0.7.0",
  "langchain-community==0.2.16",
  "langchain-chroma==0.1.3",
  "seaborn==0.13.2",
  "langchain-openai==0.1.23",
  "gradio==4.44.0",
  "pypdf==4.3.1",
  "bs4==0.0.2",
  "jq==1.8.0",
  "transformers==4.44.2",
  "langchain-experimental==0.0.65",
  "langchain-huggingface==0.0.3",
  "sentence-transformers==3.1.0",
  "langchain-ollama==0.1.3",
  "deepl==1.18.0",
  "langdetect==1.0.9",
  "faiss-cpu==1.8.0.post1",
  "rank-bm25==0.2.2",
  "kiwipiepy==0.18.1",
  "openpyxl==3.1.5",
  "krag==0.0.25",
  "langchain-anthropic==0.1.23",
  "langchain-google-genai==1.0.10",
  "langchain-groq==0.1.10",
  "python-dotenv==1.0.1",
  "onnxruntime>=1.17,<2.0.0",        # ^1.17 대응
  "tokenizers==0.19.1",
  "fastapi>=0.116.1,<0.117.0",       # ^0.116.1 대응
  "uvicorn>=0.35.0,<0.36.0",         # ^0.35.0 대응
  "chromadb>=0.5.4,<0.6"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
